2015-05-11  Xiaowei Zhan  <zhanxw@dumbo.csgstat.sph.umich.edu>

	* Change '--meta score' for binary related individuals
	* Improve documentation

2015-05-09  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix and verified '--meta cov' outputs
	* Improve SKAT permutation
	* Improve documentation

2015-04-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support generating meta analysis summary statistics for binary traits related individuals
	* Fix '--meta cov' calculation in the hemizygous region

2015-04-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Update PAR region definition (now support hg38/GRCh38)
	* Fix duplicated variants in gene/set based tests

2015-04-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix output formats for Firth regression

2015-04-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bug when dealing binary phenotypes
	* Imporve stability in Firth regression
	* Revise banner

2015-03-24  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise documentation
	* Fix conservative p-values in analyticVT models
	* Fix statistics in many rare variant tests

2015-03-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve FamSkat speed
	* Fix outputs for FpTest
	* Add auto-indexing function for "--meta score" model
	* Fix bug when outputting zero frequency

2015-03-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support dosage (vcf2kinship)
	* Fix memory leaks (rvtests)
	* Improve prompt messages

2015-03-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Clean code
	* Support log for vcf2kinship

2015-02-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Restructure classes and reduce duplicated codes

2015-02-08  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve numeric stability for linear mixed models

2015-01-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
