@@ -13,12 +13,12 @@ echo "Single variant analysis"
 ../executable/rvtest --pheno pheno --inVcf example.vcf --single wald --covar covar --covar-name c1,c2 --out out4
 ../executable/rvtest --pheno pheno --inVcf example.vcf --single wald --covar covar.missing --covar-name c1,c2 --out out5
 
-echo "Meta-analysis"
+echo "Meta-analysis (generate summary statistics)"
 ../executable/rvtest --pheno pheno --inVcf example.vcf --meta score,cov --covar covar --covar-name c1,c2 --useResidualAsPhenotype --inverseNormal --out out6
 ## for related individual, need to have their kinship estimated
 ../executable/vcf2kinship --ped pheno --bn --out output
 ../executable/vcf2kinship --inVcf example.vcf --bn --out output
-## now use "--kinship" to speicfy kinship file
+## now use "--kinship" to specify kinship file
 ../executable/rvtest --pheno pheno --inVcf example.vcf --meta score,cov --covar covar --covar-name c1,c2 --useResidualAsPhenotype --inverseNormal --kinship output.kinship --out out7
 ../executable/rvtest --pheno pheno --inVcf example.vcf --meta score,cov,dominant,recessive --covar covar --covar-name c1,c2 --useResidualAsPhenotype --inverseNormal --kinship output.kinship --out out8
 
@@ -27,4 +27,4 @@ echo "Rare-variant analysis"
 ../executable/rvtest --pheno pheno --inVcf example.vcf.gz --setFile setFile --vt price --out out10
 ../executable/rvtest --pheno pheno --inVcf example.vcf.gz --setFile setFile --kernel kbac,skat --out out11
 
-echo "Documentation of the examples can be found in README.md."
+echo "Documentation of the examples can be found in README.md or https://github.com/zhanxw/rvtests/blob/master/README.md ."
